syntax = "proto3";
package status;

service StatusService {
  rpc GetStatus(StatusRequest) returns (StatusResponse) {}
}

message StatusRequest {}

message StatusResponse {
  string version = 1;
  int64 start_time = 2;
}